Created end point to delete a room.
